# azure-iot-sdk-c-integration

./: CMakeLists.txt  ThreadAPI.cpp  platform.cpp  socketio.cpp  tickcounter.cpp
